bugfixes - style changes to prevent cut off buttons, allow zero filter selections and reset, all on button now all on/off

--- a/public/app.css
+++ b/public/app.css
@@ -99,7 +99,7 @@ a {
 }
 .optionContainer {
   display: inline-block;
-  margin: 4px 10px;
+  margin: 4px 5px;
   cursor: pointer;
   border: 1px solid rgba(0,0,0,0);
   border-radius: 4px;
@@ -304,6 +304,9 @@ margin: 0 auto 0 10px;
   top: 1px;
   cursor: pointer;
 }
+.errorImage {
+  width: 100%;
+}
 
 /* title modal overlay */
 .descriptionModalOverlay {
@@ -459,7 +462,7 @@ box-sizing: border-box;
 padding-bottom: 5px;
 }
 .sliderContainer {
-  padding: 0 1.25%;
+  padding: 0 1.3%;
   vertical-align: middle;
   text-align: center;
   max-width: 142px;
@@ -488,6 +491,7 @@ padding-bottom: 5px;
   position: relative;
   border-radius: 50px;
   box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+  left: 1px;
 }
 .slider:after {
   content: 'OFF';
